확대축소가 가능한 PhoteView 를 사용

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,8 +15,9 @@
         android:gravity="center">
 
        <de.hdodenhof.circleimageview.CircleImageView
-           android:layout_width="250dp"
-           android:layout_height="250dp"
+           android:id="@+id/profileImg"
+           android:layout_width="150dp"
+           android:layout_height="150dp"
            app:civ_border_width="2dp"
            app:civ_border_color="#000000"
            android:src="@drawable/bts"/>
